--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
